# Soroban-Cookbook-

./: .gitignore  README.md  cobertura.xml  issue-26-and-18-requirement.md  skills-lock.json
.github/workflows/: ci.yml  test.yml
examples/advanced/01-multi-party-auth/: Cargo.toml  README.md
examples/advanced/01-multi-party-auth/src/: lib.rs  test.rs
examples/advanced/01-multi-party-auth/test_snapshots/test/: test_multi_sig_transfer.1.json  (+4 more)
examples/basics/: README.md
examples/basics/01-hello-world/: README.md
examples/basics/01-hello-world/src/: lib.rs  test.rs
examples/basics/02-storage-patterns/: Cargo.toml  README.md
examples/basics/02-storage-patterns/src/: test.rs
examples/basics/03-authentication/: Cargo.toml  README.md
examples/basics/03-authentication/src/: lib.rs  test.rs
examples/basics/04-events/: Cargo.toml  README.md
examples/basics/04-events/src/: lib.rs  test.rs
examples/basics/05-auth-context/: Cargo.toml  README.md
examples/basics/05-auth-context/src/: lib.rs  test.rs
examples/basics/05-error-handling/src/: lib.rs  test.rs
examples/basics/06-validation-patterns/src/: test.rs
examples/basics/06-validation-patterns/tests/: validation_patterns_test.rs
examples/basics/events/src/: lib.rs  test.rs
examples/basics/instance-storage/: Cargo.toml
examples/basics/instance-storage/src/: lib.rs  test.rs
examples/basics/persistent-storage/: Cargo.toml
examples/basics/persistent-storage/src/: lib.rs  test.rs
examples/basics/temporary_storage/: Cargo.toml
examples/basics/temporary_storage/src/: lib.rs  test.rs
(+44 files in other folders)
